--- a/CSS/infoBox.css
+++ b/CSS/infoBox.css
@@ -38,7 +38,30 @@
   cursor: pointer;
   margin-left: 4px;
 }
-
+.btn-todo-initiation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgb(51, 51, 233, 0.5);
+  border-radius: 5rem; */
+  height: 5rem;
+  width: 10rem;
+  margin-right: 1rem;
+}
+.btn-selector {
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 2rem;
+  border-width: 0px;
+  font-size: 1.8rem;
+}
+.btn-delete {
+  background-color: rgb(0, 128, 0, 0.8);
+  margin-right: 0.7rem;
+}
+.btn-disregard {
+  background-color: rgba(255, 0, 0, 0.6);
+}
 /*TODO styles*/
 .todo-list-container {
   height: inherit;
