minor code refactoring, fixed SVG path

--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -1,6 +1,6 @@
 :root {
   --color-light--1: #aaa;
-  --color-light--2: #f8f6f6;
+  --color-light--2: #eeeaea;
   --color-light--3: #d6dee0;
   --color-light--4: #fff;
 
